tests/baselines/reference/computedPropertyNames9_ES5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
computedPropertyNames9_ES5.ts(9,5): error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== computedPropertyNames9_ES5.ts (1 errors) ====
    function f(s: string): string;
    function f(n: number): number;
    function f<T>(x: T): T;
    function f(x): any { }
    
    var v = {
        [f("")]: 0,
        [f(0)]: 0,
        [f(true)]: 0
        ~~~~~~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
    }